<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/Presentation.Theme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/core_presentation_vector_drawable_arrow_left"
            app:popupTheme="@style/Presentation.Theme.PopupOverlay"
            app:title="@string/fragment_feature_user_cashier_refund_payment_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/drawable_feature_user_cashier_refund_vector_drawable_refund" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_18sdp"
            android:paddingBottom="@dimen/_36sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:gravity="start|center"
                    android:singleLine="true"
                    android:text="@string/fragment_feature_user_cashier_refund_payment_total_products_title"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/total_products_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:gravity="end|center"
                    android:singleLine="true"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:ellipsize="marquee"
                    android:gravity="start|center"
                    android:singleLine="true"
                    android:text="@string/fragment_feature_user_cashier_refund_payment_total_refund_products_title"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/refund_products_count_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:gravity="end|center"
                    android:singleLine="true"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:gravity="start|center"
                    android:singleLine="true"
                    android:text="@string/fragment_feature_user_cashier_refund_payment_receipt_total_cost_title"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/receipt_total_cost_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:gravity="end|center"
                    android:singleLine="true"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:gravity="start"
                    android:singleLine="true"
                    android:text="@string/fragment_feature_user_cashier_refund_payment_refund_receipt_amount_title"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textSize="@dimen/_15sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/refund_receipt_amount_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:gravity="end|center"
                    android:singleLine="true"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            style="@style/Presentation.Widget.RecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout" />

        <LinearLayout
            android:id="@+id/buttons_container_linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/refund_proceed_button"
                style="@style/Presentation.Widget.Button.RoundedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:text="@string/core_presentation_common_continue"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cash_payment_type_button"
                style="@style/Presentation.Widget.Button.OutlinedRoundedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:duplicateParentState="true"
                android:text="@string/fragment_feature_user_cashier_refund_payment_cash_payment_type_button_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/card_payment_type_button"
                style="@style/Presentation.Widget.Button.OutlinedRoundedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:duplicateParentState="true"
                android:text="@string/fragment_feature_user_cashier_refund_payment_card_payment_type_button_title" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>