<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/Presentation.Theme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/core_presentation_vector_drawable_arrow_left"
            app:popupTheme="@style/Presentation.Theme.PopupOverlay"
            app:title="@string/fragment_feature_user_cashier_refund_product_list_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            style="@style/Presentation.Widget.RecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/available_cash_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/viewholder_feature_user_cashier_refund_product_list" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/available_cash_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:visibility="gone"
            android:padding="@dimen/_5sdp"
            android:text="@string/fragment_feature_user_cashier_refund_product_list_available_cash_in_current_shift_info"
            android:textAppearance="@style/Presentation.TextAppearance.Regular"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toTopOf="@+id/frame_layout" />

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_72sdp"
            android:background="?selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/core_presentation_drawable_accent"
                android:duplicateParentState="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_72sdp"
                android:background="?selectableItemBackground"
                android:duplicateParentState="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/fragment_feature_user_cashier_refund_product_list_proceed_button_title"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/amount_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Presentation.TextAppearance.Title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_22sdp" />

            </LinearLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>